# M365Crawl

./: .env.example  .gitignore  BUSINESS-USER-SUMMARY.md  Caddyfile  Cargo.toml  Containerfile  DEPLOYMENT-GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  FAQ.md  M365-BIGBRAIN-README.md  M365-BRAIN-README.md  M365Crawl_Deployment.md  ORCHESTRATION-SUMMARY.md  PRODUCTION-READINESS-REPORT.md  PRODUCTION-README.md  PROJECT-SUMMARY.md  README.md  SIMPLE-SETUP-GUIDE.md  What-You-Get.md  compose.prod.yaml  compose.yaml  fixes-for-one-click-deploy.md  m365crawl-final.sh  m365crawl-ultimate.sh  one-click-deploy.sh  podman-deploy.sh  register-providers.sh  requirements.txt  test-cosmos-fix.sh  test-m365crawl.sh  test_m365_brain.py  validate-deployment.sh
.github/workflows/: ci.yml
backup-scripts-20250907/: m365-brain-complete.sh  m365-brain-deploy.sh  m365-brain-production.sh  test-cosmos-fix.sh
crates/common/: Cargo.toml
crates/common/src/: lib.rs
services/auth_broker/: Cargo.toml  Dockerfile
services/auth_broker/src/: main.rs
services/connectors/: Cargo.toml  Dockerfile
services/connectors/src/: main.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/public/: index.html
services/gateway/src/: main.rs
services/indexer/: Cargo.toml  Dockerfile
services/indexer/src/: main.rs
services/orchestrator/: Cargo.toml  Dockerfile
services/orchestrator/src/: main.rs
services/webhook/: Cargo.toml  Dockerfile
services/webhook/src/: main.rs
sql/migrations/: 0001_init.sql
